src/App.css
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
@import "tailwindcss";
@font-face {
  font-family: "Death Star";
  src: url("./assets/fonts/Death Star.otf") format("opentype");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@theme {
  /* fonts */
  --font-bebas: "Bebas Neue", sans-serif;
  --font-death-star: "Death Star", sans-serif;
  --font-montserrat: "Montserrat", sans-serif;
  /* colors */
  --color-custom-purple: #b377ff;
  --color-custom-pink: #ceb7ff;
}

/* Base styles for html and body */
html {
  height: 100%;
  font-size: 16px;
  font-weight: 400;
}

body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  overflow-x: hidden;
}

#root {
  height: 100%;
}

.slide-structure {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  height: 100vh;
  width: 100%;
}

.swiper-slide {
  user-select: text !important;
  -webkit-user-select: text !important;
  -moz-user-select: text !important;
  -ms-user-select: text !important;
}

.swiper-slide p,
.swiper-slide h1,
.swiper-slide h2,
.swiper-slide h3,
.swiper-slide h4,
.swiper-slide h5,
.swiper-slide h6,
.swiper-slide span,
.swiper-slide div {
  pointer-events: auto;
  user-select: text !important;
}
.container {
  @apply max-w-[1638px] px-[15px] py-0 mx-auto my-0 flex justify-center items-center flex-col;
}

/* Custom text styling with shadow and stroke */
.pink-stroke {
  -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: var(--color-custom-pink);
}
.white-stroke {
  -webkit-text-stroke-width: 2px;
  -webkit-text-stroke-color: white;
}
.purple-shadow {
  filter: drop-shadow(0px 0px 2px var(--color-custom-purple))
    drop-shadow(0 0 2px var(--color-custom-purple));
}
.bar {
  width: 100%;
  max-width: 515px;
  height: 16px;
  border: 1px solid var(--color-custom-pink);
  stroke-width: 1px;
  stroke: #ceb7ff;
  filter: drop-shadow(0 0 4px #ceb7ff);
}

